// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemberBanner matches the last snapshot 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": "yay.png",
      }
    }
  />
  <View>
    <Image
      source={
        Object {
          "uri": "pong.png",
        }
      }
    />
  </View>
</View>
`;

exports[`MemberHeader matches the last snapshot 1`] = `
<View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Jonas
    </Text>
    <View>
      <Icon
        name="Messages"
      />
      <MemberMenu
        flagMember={[Function]}
      />
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    whale
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    fingers crossed
  </Text>
</View>
`;

exports[`MemberProfile doesnt have the flag content option 1`] = `
<Connect(MemberFeed)
  header={
    <View>
      <MemberBanner
        person={
          Object {
            "id": 1,
          }
        }
      />
      <View>
        <MemberHeader
          flagMember={undefined}
          person={
            Object {
              "id": 1,
            }
          }
        />
        <ReadMoreButton
          goToDetails={undefined}
        />
      </View>
    </View>
  }
  id={1}
/>
`;

exports[`MemberProfile matches the last snapshot 1`] = `
<Connect(MemberFeed)
  header={
    <View>
      <MemberBanner
        person={
          Object {
            "id": 1,
          }
        }
      />
      <View>
        <MemberHeader
          flagMember={[Function]}
          person={
            Object {
              "id": 1,
            }
          }
        />
        <ReadMoreButton
          goToDetails={undefined}
        />
      </View>
      <Connect(FlagContent)
        linkData={
          Object {
            "id": 1,
            "type": "member",
          }
        }
        onClose={[Function]}
        type="member"
        visible={false}
      />
    </View>
  }
  id={1}
/>
`;

exports[`ReadMoreButton matches the last snapshot 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Read More
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
